fix: add onclick in arrow card and white space

--- a/src/components/UI/molecules/JobCardDesktop/JobCardDesktop.module.scss
+++ b/src/components/UI/molecules/JobCardDesktop/JobCardDesktop.module.scss
@@ -50,6 +50,20 @@
     flex-direction: column;
   }
 
+  &__button {
+    border: none;
+    background: transparent;
+    &:focus-visible {
+      outline: none;
+    }
+  }
+
+  &__white-space {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
   &__header {
     display: flex;
     align-items: flex-end;
